Fix rewrite of location data

--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title">{{ serverIP }} </h3>
-                {{#if region}}
-                <h2 class="panel-title"><span id="region{{ i }}">Unknown Region</span></h2>
-                {{else}}
-                <h2 class="panel-title">Anywhere, United States</h2>
-                {{/if}}
+                <h2 class="panel-title"><span id="region{{ i }}">Anywhere, United States</span></h2>
             </div>
             <div class="panel-body">
                 <div class="server" id="server{{ i }}">Loading...</div>
