I liked my style better :)

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                         (function(i, serverIP) {
                                             var jqhxrGeoInfo = $.getJSON("http://www.telize.com/geoip/" + serverIP.substr(0, serverIP.indexOf(':')), null )
                                             .done(function(data) {
-                                                    $("#region" + i).html(data.continent_code + ", " + data.country_code3);
+                                                    $("#region" + i).html(data.region + ", " + data.country);
                                                 });
                                             var jqhrxServerInfo = $.getJSON("http://" + serverIP, null )
                                             .done(function(serverInfo) {
