Forgot the hostPlayer

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <img src="images/maps/{{mapFile}}.png" alt="{{map}}" class="img-responsive">
     <h3>{{ name }} </h3>
     <h4>{{ variant }} / {{ map }}</h4>
+	<h3>{{hostPlayer}}</h3>
     <p><em>Players:</em> {{ players.length }}/{{ maxPlayers }} || {{status}} <br>
         <ul>
         {{#each players}}
