--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         
         var VerifyIPRegex = /^(?:(?:2[0-4]\d|25[0-5]|1\d{2}|[1-9]?\d)\.){3}(?:2[0-4]\d|25[0-5]|1\d{2}|[1-9]?\d)(?:\:(?:\d|[1-9]\d{1,3}|[1-5]\d{4}|6[0-4]\d{3}|65[0-4]\d{2}|655[0-2]\d|6553[0-5]))?$/;
        
-        var jqhxr = $.getJSON( "http://192.99.124.162/list", null)
+        var jqhxr = $.getJSON( "http://eldewrito.red-m.net/list", null)
                 .done(function( data ) {
                         for(var i = 0; i < data.result.servers.length; i++)
                         {
