Since there's the extra real estate, unhide the players
Removed the unnamed, tried to make it join games... failed.

--- a/index2.html
+++ b/index2.html
@@ -60,22 +60,15 @@
     <h3>{{ name }} </h3>
     <h4>{{ variant }} / {{ map }}</h4>
     <h3>{{hostPlayer}}</h3>
-    <div class="panel panel-info" id="#players{{ serverId }}">
         <div class="panel-heading">
-            <h4><a class="accordian toggle" data-toggle="collapse" data-parent="#players{{ serverId }}" href="#plist{{ serverId }}"> <em>Players:</em> {{ players.length }}/{{ maxPlayers }} || {{status}}</a></h4> 
-        </div>
-        <div id="plist{{ serverId }}" class="panel-collapse collapse">
+            <h4><em>Players:</em> {{ players.length }}/{{ maxPlayers }} || {{status}}</h4> 
                 <ul>
                 {{#each players}}
                 {{#if name}}
                 <li>{{this.name}} - {{kills}}/{{deaths}}/{{assists}}</li>
-                {{else}}
-                <li>[ no name ] - {{kills}}/{{deaths}}/{{assists}}</li>
                 {{/if}}
                 {{/each}}
                 </ul>
-        </div>
-    </div>
     {{else}}
         <h3>Do not join<h3>
     {{/if}}
@@ -86,11 +79,11 @@
         <div class="col-md-4">{{ numPlayers }} / {{ maxPlayers }}</div>
         <div class="col-md-4">{{ variant }}</div>        
 </script>
-
 <script id="server-list-template" type="text/x-handlebars-template">
     {{#each servers}}
-    <div class="well" id="serverlist{{ i }}" onclick="joinServer({{serverIP}});">
-        <div class="col-md-2"><a href="#" onclick="updateServerInfo({{i}});">{{ serverIP }}</a></div>
+    <div class="well" id="serverlist{{ i }}">
+		<div class="col-md-2"><a href="#" onclick="updateServerInfo({{i}});">{{ serverIP }}</a></div>
+        <div class="col-md-2"><a href="#" onclick="console.log({{serverIP}});">[ JOIN ]</a></div>
         <div class="col-md-2"><span id="region{{ i }}">Anywhere, United States</span></div>
         <div class="col-md-8" id="serverid{{ i }}"></div>
     </div>
