--- a/index2.html
+++ b/index2.html
@@ -81,7 +81,7 @@
         <div class="col-sm-5">{{ hostPlayer }} || {{ name }}</div>
         <div class="col-xs-3">{{ numPlayers }} / {{ maxPlayers }}</div>
 		{{#if variant}}
-        <div class="col-sm-3">{{ variant }}</div>
+        <div class="col-sm-3">{{ variant }} / {{ map }}</div>
 		{{else}}
 		<div class="col-sm-3">{{ map }}</div>
 		{{/if}}
@@ -99,7 +99,7 @@
     {{#each servers}}
 		<tr>
 			<td class="col-md-2"><a href="#" onclick="console.log({{serverIP}});">{{ serverIP }}</a></td>
-			<td class="col-sm-1"><a href="#" onclick="updateServerInfo({{i}});">INFO</a></td>
+			<td class="col-xs-1"><a href="#" onclick="updateServerInfo({{i}});">INFO</a></td>
 			<td class="col-md-2"><span id="region{{ i }}">Anywhere, United States</span></td>
 			<td class="col-md-6" id="serverid{{ i }}"></td>
 		</tr>
