"Loading..." in the Game Data field

--- a/index2.html
+++ b/index2.html
@@ -101,7 +101,7 @@
 			<td class="col-md-2"><a href="#" onclick="console.log({{serverIP}});">{{ serverIP }}</a></td>
 			<td class="col-xs-1"><a href="#" onclick="updateServerInfo({{i}});">INFO</a></td>
 			<td class="col-md-2"><span id="region{{ i }}">Anywhere, United States</span></td>
-			<td class="col-md-6" id="serverid{{ i }}"></td>
+			<td class="col-md-6" id="serverid{{ i }}">Loading...</td>
 		</tr>
     {{/each}}
 		</tbody>
