Expanded "S" to "Score"

--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,7 @@
                 <table class="table-striped">
 				<thead>
 					<th>Name</th>
-					<th>S</th>
+					<th>Score</th>
 					<th>K</th>
 					<th>D</th>
 					<th>A</th>
@@ -77,7 +77,7 @@
                 {{#if name}}
 				<tr>
 					<td class="col-xs-1">{{this.name}}</td>
-					<td>{{score}}</td>
+					<td><center>{{score}}</center></td>
 					<td>{{kills}}</td>
 					<td>{{deaths}}</td>
 					<td>{{assists}}</td>
