Change "passworded" to private
It's shorter, and not a mouthful.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-sm-5"><b>{{ hostPlayer }}</b> <br /> {{ name }}</div>
         <div class="col-xs-3">{{ numPlayers }} <b>/</b> {{ maxPlayers }}
         {{#if passworded}}
-        <br /><b>[PASSWORDED]</b>
+        <br /><b>[PRIVATE]</b>
         {{/if}}
         </div>
         {{#if variant}}
