--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <img src="images/bg.jpg" id="bg" alt="">
 <img src="images/eldorito.png" id="logo">
 <h2 class="browserTitle"><b>Eldorito Server Browser</b></h2>
+<a class="btn btn-default refresh" href="#" role="button" onclick="window.location.reload();"><b>Refresh</b></a>
 
 <div id="container">
 
