Switched "Loading..." to text-muted

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <td class="col-md-2"><a href="#" onclick="joinServer({{i}});">{{ serverIP }}</a></td>
             <td class="col-xs-1"><a href="#" onclick="updateServerInfo({{i}});"><b>View</b></a></td>
             <td class="col-md-2"><span id="region{{ i }}">Loading...</span></td>
-            <td class="col-md-6" id="serverid{{ i }}">Loading...</td>
+            <td class="col-md-6 text-muted" id="serverid{{ i }}">Loading...</td>
         </tr>
     {{/each}}
         </tbody>
