Spilt Status to a new line

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     {{/if}}
     <h3>{{hostPlayer}}</h3>
         <div class="panel-heading">
-            <h4><b>Players:</b> {{ numPlayers }}/{{ maxPlayers }} <b>Status:</b>
+            <h4><b>Players:</b> {{ numPlayers }}/{{ maxPlayers }}</h4>
+            <h4><b>Status:</b>
                 {{#ifCond status "InGame"}}
                 In Progress
                 {{else}}
