Realized I don't need a separate copy
Since the change is in the js anyways

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <img src="images/eldorito.png" id="logo">
 <h2 class="browserTitle"><b>Eldorito Server Browser</b></h2>
 <a class="btn btn-default refresh" href="#" role="button" onclick="window.location.reload();"><b>Refresh</b></a>
+<a class="btn btn-default quit" href="#" role="button" onclick="dewRcon.send('game.togglemenu');"><b>Quit</b></a>
 
 <div id="container">
 
