Remove "Quit" button, add F11 toggle
Mousetrap seemed like the easiest way to pull this off.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="js/bootstrap.min.js"></script>
     
     <script src="js/dewRcon.js"></script>
+    <script src="js/mousetrap.min.js"></script>
+
     
     <script src="js/browser.js"></script>
     <link rel="stylesheet" href="css/browser.css">  
@@ -20,7 +22,6 @@
 <img src="images/eldorito.png" id="logo">
 <h2 class="browserTitle"><b>Eldorito Server Browser</b></h2>
 <a class="btn btn-default refresh" href="#" role="button" onclick="window.location.reload();"><b>Refresh</b></a>
-<a class="btn btn-default quit" href="#" role="button" onclick="dewRcon.send('game.togglemenu');"><b>Quit</b></a>
 
 <div id="container">
 
