Added version number to gameCard
Because some people are running the alpha builds and some are running
the "official"... sigh.

--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
                     </tr>
                     {{/if}}
                     {{/each}}
+                    
                     </tbody>
                     </table>
+                        <h5 class="text-muted"><b>Version: </b>{{eldewritoVersion}}</h5>
                 {{/if}}
     {{else}}
         <img src="images/maps/mainmenu.png" alt="{{map}}" class="img-responsive">
