--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-<img src="images/bg.jpg" id="bg" alt="">
+<img src="images/hanger.png" id="bg" alt="">
 <img src="images/eldorito.png" id="logo">
 <h2 class="browserTitle"><b>Eldorito Server Browser</b></h2>
 <a class="btn btn-default refresh" href="#" role="button" onclick="window.location.reload();"><b>Refresh</b></a>
