--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
 <img src="images/hanger.png" id="bg" alt="">
+<img src="images/overlay.png" id="overlay">
 <img src="images/eldorito.png" id="logo">
 <h2 class="browserTitle"><b>Eldorito Server Browser</b></h2>
 <a class="btn btn-default refresh" href="#" role="button" onclick="window.location.reload();"><b>Refresh</b></a>
