--- a/index2.html
+++ b/index2.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Server Browser</title>
+    <link rel="stylesheet" href="css/jquery.dataTables.min.css">
     <script src="js/jquery.dataTables.min.js"></script>  
     
     <script src="js/handlebars.min.js"></script>
