Moved to an image button
For more Halo styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <img src="images/eldorito.png" id="logo" class="tinted-image">
 <h2 class="browserTitle"><b>Eldorito Server Browser</b></h2>
 <h3><div class="playerCount">00 players</div><div class="serverCount">00 servers</div></h3>
-<a class="btn btn-default refresh" href="#" role="button" onclick="window.location.reload();"><b>Refresh</b></a>
+<button class="refresh" onclick="window.location.reload();">Refresh</button>
 
 <div id="container">
 
